# chess_ai.ml

./: .env  .gitignore  IDEAS.md  LICENSE.txt  Makefile  README.md  TODO.md  pyproject.toml  test_stockfish.py
.github/: copilot-instructions.md
data/: README.md  uci2class_arr_black.json  uci2class_white.json
data/fishtest_pgns/: README.md
data/pgn/: README.md
data/pgn_fishtest/: .gitignore
data/polyglot/: README.md
output/: .gitignore  move_to_int.pickle
scripts/: bench_inference.py  build_evals_fishtest.py  build_evals_stockfish.py  build_uci2class.py  check_dataset.py  dataset_viewer.py  model_bench.py  model_viewer.py  pgn_splitter.py  ucinet_named_pipe_proxy.py
src/: _build_dataset.py  build_boards_moves.py  build_dataset.py  play.py  predict copy.py  predict.py  train copy.py  train.py
src/commands/: build_dataset.py  play.py  predict.py  train.py
src/encoding/: board_encoding.py  move_encoding.py  move_encoding_alphazero.py  move_encoding_az.py  move_encoding_uci2class.py
src/libs/: board_utils.py  chess_dataset.py  chess_dataset_TOREMOVE.py  chess_extra.py  chess_model copy.py  chess_model.py  (+19 more)
tests/: test_basic.py  test_board_encoding.py  test_move_encoding_alphazero.py  test_move_encoding_az.py  test_move_encoding_uci2class.py  test_puct.py
tmp/: basic.ipynb  board_ascii.py  board_attackers.py  connect4_pure_alphazero.py  dataset_to_chess.py  dataset_to_eval.py  disp_tensor.py  game_slice_prototype.py  mcts_tictactoe_chatgpt.py  model_dual_head.py  mtcs_tictactor_gemini.py  mtcs_tictactor_gemini_original.py  opening.py  pgn_browser.py  pgn_stockfish.py  regression.py  regression_2.py  regression_3.py  regression_3_dual_head.py  regression_old.py  regression_old0.py  stockfish_pychess.py  stockfish_testbed.py  test_new_encoding.py
tools/: bench_inference.py  build_uci2class.py  check_dataset.py  dataset_viewer.py  model_viewer.py
(+54 files in other folders)
