[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project]
name = "chess-bot.ml"
version = "0.1.0"
description = "A chess bot that learns from games using machine learning."
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "chess==1.11.2",
    "numpy==2.2.6",
    "torch==2.8.0",
]
requires-python = "~=3.10"