[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[project]
name = "chess-bot.ml"
version = "0.1.0"
description = "A chess bot that learns from games using machine learning."
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "chess==1.11.2",
    "numpy==2.2.6",
    "torch==2.8.0",
    "stockfish==3.28.0",
    "tqdm==4.67.1",
]
requires-python = "~=3.10"


# Configuration for the Black code formatter 
[tool.black]
line-length = 160   # to match the 79 character limit of PEP 8, but allow some extra space for longer lines
